[gd_scene load_steps=13 format=2]

[ext_resource path="res://Game.gd" type="Script" id=1]
[ext_resource path="res://assets/GameBackground.jpeg" type="Texture" id=2]
[ext_resource path="res://Board.tscn" type="PackedScene" id=3]
[ext_resource path="res://Bay.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/Message.png" type="Texture" id=5]
[ext_resource path="res://assets/Font.tres" type="DynamicFont" id=6]
[ext_resource path="res://Button.tscn" type="PackedScene" id=7]

[sub_resource type="Animation" id=1]
resource_name = "GameOver"
tracks/0/type = "value"
tracks/0/path = NodePath("GameOver:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("GameOver/Ok:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Hud/Score:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 40, 20 ), Vector2( -5, 540 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Message:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Cancel:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("GameOver/Label:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("GameOver:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Board:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -600, 150 ), Vector2( 25, 150 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Board:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.3, 0.3 ), Vector2( 0.5, 0.5 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Hud/Score:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 200, 20 ), Vector2( 40, 20 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Message:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=3]
resource_name = "GiveUp"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Message:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Cancel/Yes:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Cancel/No:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Cancel:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=4]
resource_name = "HighScore"
tracks/0/type = "value"
tracks/0/path = NodePath("GameOver/Label:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ "Game Over", "~ HIGH SCORE ~ " ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("GameOver/Label:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.5, 0.7, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("GameOver/Label:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1, 0.5, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.439216, 0.67451, 0.94902, 1 ), Color( 1, 0.419608, 0.419608, 1 ), Color( 0.65098, 0.956863, 0.156863, 1 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Message:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Cancel:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 600.0
margin_bottom = 1099.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 1

[node name="Board" parent="." instance=ExtResource( 3 )]
position = Vector2( 25, 150 )
scale = Vector2( 0.5, 0.5 )

[node name="Bay" parent="." instance=ExtResource( 4 )]
position = Vector2( 75, 800 )
scale = Vector2( 0.5, 0.5 )

[node name="Message" type="Control" parent="."]
editor/display_folded = true
margin_right = 40.0
margin_bottom = 40.0

[node name="Sprite" type="Sprite" parent="Message"]
position = Vector2( 10, 400 )
texture = ExtResource( 5 )
centered = false

[node name="Cancel" type="Control" parent="."]
editor/display_folded = true
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="Label" type="Label" parent="Cancel"]
margin_left = 10.0
margin_top = 400.0
margin_right = 610.0
margin_bottom = 550.0
custom_fonts/font = ExtResource( 6 )
text = "Give up?"
align = 1
valign = 1

[node name="Yes" parent="Cancel" instance=ExtResource( 7 )]
margin_left = 350.0
margin_top = 665.842
margin_right = 520.0
margin_bottom = 759.842
Text = "Yes"

[node name="No" parent="Cancel" instance=ExtResource( 7 )]
margin_left = 134.948
margin_top = 665.842
margin_right = 304.948
margin_bottom = 759.842
Text = "No"

[node name="GameOver" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Label" type="Label" parent="GameOver"]
margin_left = 10.0
margin_top = 400.0
margin_right = 610.0
margin_bottom = 550.0
custom_fonts/font = ExtResource( 6 )
text = "Game Over"
align = 1
valign = 1

[node name="Ok" parent="GameOver" instance=ExtResource( 7 )]
margin_left = 134.948
margin_top = 665.842
margin_right = 466.948
margin_bottom = 759.842
Text = "OK"

[node name="Hud" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Score" type="Label" parent="Hud"]
margin_left = -5.0
margin_top = 540.0
margin_right = 420.0
margin_bottom = 628.0
custom_fonts/font = ExtResource( 6 )
text = "0"
align = 2

[node name="GiveUp" parent="Hud" instance=ExtResource( 7 )]
margin_left = 20.0
margin_top = 20.0
margin_right = 120.0
margin_bottom = 80.0
Text = "X"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/GameOver = SubResource( 1 )
anims/GameStart = SubResource( 2 )
anims/GiveUp = SubResource( 3 )
anims/HighScore = SubResource( 4 )
anims/NoGiveUp = SubResource( 5 )
[connection signal="Hover" from="Bay" to="." method="_on_Bay_Hover"]
[connection signal="Position" from="Bay" to="." method="_on_Bay_Position"]
[connection signal="pressed" from="Cancel/Yes" to="." method="_on_GiveUp_Yes_pressed"]
[connection signal="pressed" from="Cancel/No" to="." method="_on_GiveUp_No_pressed"]
[connection signal="pressed" from="GameOver/Ok" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="Hud/GiveUp" to="." method="_on_GiveUp_pressed"]
